--- a/style.css
+++ b/style.css
@@ -92,13 +92,10 @@ p {
 }
 
 .music-notation {
-    /* padding-left: 2em; */
-    /* padding-right: 2em; */
-    width: inherit;
-    /* height: inherit; */
+    /* width: 100%; */
+    /* background-color: #353638; */
     display: flex;
     flex-direction: column;
-    /* gap: 1em; */
     position: relative;
 }
 
@@ -108,6 +105,7 @@ p {
     margin-bottom: 1em;
     border-radius: 1em;
     height: 20em;
+    width: 90%;
     background-color: transparent;
 }
 
@@ -120,7 +118,7 @@ p {
     margin-top: 1em;
     border: 0.15em solid #d9d9d9;
     border-radius: 1em;
-    height: 21em;
+    height: 20em;
     background-color: #d9d9d9;
 }
 
