--- a/style.css
+++ b/style.css
@@ -343,26 +343,28 @@ p {
     .container {
         display: flex;
         flex-direction: column;
-        padding: 0 1em;
+        padding: 0 2em;
         gap: 1em;
     }
 
     .notation {
         display: flex;
         flex-direction: row;
-        gap: 1em;
-        overflow-x: auto;
+        gap: 2em;
+        /* overflow-x: auto; */
     }
 
     .music-notation,
     .parsed-note {
         min-width: 250px;
-        width: 50%;
+        width: 100%;
+        height: 30em;
+        /* background-color: #b347f5; */
     }
 
     .music-notation textarea,
     .parsed-note pre {
-        height: 15em;
+        height: 20em;
         width: 90%;
     }
 
@@ -375,7 +377,7 @@ p {
     .button {
         flex-direction: column;
         gap: 1em;
-        padding: 1em;
+        padding: 2em;
         width: 100%;
     }
 
@@ -391,11 +393,18 @@ p {
         font-size: x-large;
     }
 
+    .page-description {
+        display: flex;
+        flex-direction: column;
+        gap: 0;
+    }
+
     .title {
         font-size: large;
     }
 
-    .title-input {
+    .title-input,
+    .artist-input {
         font-size: large;
         width: 6em;
     }
@@ -415,10 +424,10 @@ p {
         width: 100%;
     }
 
-    .music-notation textarea,
+    /* .music-notation textarea,
     .parsed-note pre {
         height: 12em;
-    }
+    } */
 
     .hues,
     .hues-with-no-notes {
